<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9F8DA"
    android:fadingEdge="vertical"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/FF_H1"
        android:layout_width="319dp"
        android:layout_height="82dp"
        android:layout_marginBottom="166dp"
        android:background="#C9F8DA"
        android:fontFamily="@font/paytone_one"
        android:text="@string/FF_H1"
        android:textAllCaps="true"
        android:textColor="#E508F6"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FF_H_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FF_H_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/FF_H_1"
        android:textColor="#12C105"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FF_I1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FF_H1" />

    <EditText
        android:id="@+id/FF_I1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="0"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/FF_H_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FF_H_1" />

    <TextView
        android:id="@+id/FF_H_2"
        android:layout_width="66dp"
        android:layout_height="23dp"
        android:fontFamily="@font/geo"
        android:text="@string/FF_H_2"
        android:textColor="#4E0EC5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/FFO1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FF_I1" />

    <TextView
        android:id="@+id/FFO1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/FFO1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FF_H_2" />

    <Button
        android:id="@+id/spi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spi_factor"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@id/FF_B1"
        app:layout_constraintTop_toBottomOf="@+id/FF_H1"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/FF_B1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="#F8E3AE"
        android:textColorHighlight="#F4E2A9"
        app:backgroundTint="#09A60C"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FF_H1"
        app:layout_constraintVertical_bias="0.958" />
</androidx.constraintlayout.widget.ConstraintLayout>