<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#049C71"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/FS_H1"
        android:layout_width="178dp"
        android:layout_height="52dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:fontFamily="@font/paytone_one"
        android:text="@string/FS_H1"
        android:textColor="#05FADE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/FS_H2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/FS_H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/FS_B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FS_H3"
        android:layout_width="276dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#EEF1FF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/FS_B1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FS_H1" />

    <Button
        android:id="@+id/FS_B1"
        android:layout_width="206dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:text="@string/display_spi_factor"
        app:backgroundTint="#B765CD"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toTopOf="@id/FS_B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FS_H3" />

    <Button
        android:id="@+id/FS_B2"
        android:layout_width="188dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/geo"
        android:text="@string/previous"
        android:textColor="#FFFFFF"
        app:backgroundTint="#19D5A8"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FS_H1"
        app:layout_constraintVertical_bias="0.577" />
</androidx.constraintlayout.widget.ConstraintLayout>